.tanzu/config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: inclusion-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: inclusion
    healthcheck.gslb.tanzu.vmware.com/path: /actuator/health
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-emoji-inclusion
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: emoji-inclusion
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
